--- a/mdt/data/qt_designs/model_fit/main_gui.ui
+++ b/mdt/data/qt_designs/model_fit/main_gui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>870</width>
-    <height>650</height>
+    <height>624</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -84,11 +84,6 @@
          <string>Generate protocol file</string>
         </attribute>
        </widget>
-       <widget class="QWidget" name="viewResultsTab">
-        <attribute name="title">
-         <string>View results</string>
-        </attribute>
-       </widget>
       </widget>
       <widget class="QPlainTextEdit" name="loggingTextBox">
        <property name="sizePolicy">
@@ -99,7 +94,7 @@
        </property>
        <property name="font">
         <font>
-         <family>Droid Sans Mono</family>
+         <family>Noto Mono</family>
         </font>
        </property>
        <property name="frameShape">
@@ -184,6 +179,8 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="action_MapsVisualizer"/>
+    <addaction name="separator"/>
     <addaction name="action_RuntimeSettings"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
@@ -219,6 +216,11 @@
   <action name="action_GetExampleData">
    <property name="text">
     <string>&amp;Get example data</string>
+   </property>
+  </action>
+  <action name="action_MapsVisualizer">
+   <property name="text">
+    <string>Maps &amp;visualizer</string>
    </property>
   </action>
  </widget>
