Fixed spelling mistake in GUI, reverted the parameter transformation of the weights back to the CosSqrClamp parameter transformation.

--- a/mdt/data/qt_designs/model_fit/generate_brain_mask_tab.ui
+++ b/mdt/data/qt_designs/model_fit/generate_brain_mask_tab.ui
@@ -33,7 +33,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Generate brian mask</string>
+        <string>Generate brain mask</string>
        </property>
       </widget>
      </item>
